--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
             </div>
         </div>
         
-        <p class="footer"><small><a href="https://www.cbr-xml-daily.ru/" target="_blank">Курсы ЦБ РФ в XML и JSON, API</a></small><br>
-                <small class="text-muted">&copy; <time>{{ new Date().getFullYear() }}</time> Roman Yusupov</small>
+        <p class="footer">
+            <small><a href="https://www.cbr-xml-daily.ru/" target="_blank">Курсы ЦБ РФ в XML и JSON, API</a></small><br>
+            <small class="text-muted">&copy; <time>{{ new Date().getFullYear() }}</time> Roman Yusupov</small>
         </p>
     </div>
     
