--- a/index.html
+++ b/index.html
@@ -6,7 +6,33 @@
     <title>Exchange Rates</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <style>
+    .page-heading {
+        font-weight: normal;
+        font-size: 1.8em;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+
+    .date {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .footer  {
+        text-align: center;
+        margin-top: 10px;
+     margin-bottom: 10px;
+    }
+
+    @media (min-width: 900px) {
+        .date {
+            position: absolute;
+            top: 0;
+            left: 10px;
+        }    
+    }
+    </style>
 </head>
 <body>
     <h1 class="page-heading">Exchange Rates</h1>
